# powerio

./: .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  book.toml  pyproject.toml  rustfmt.toml  test_pinned.rs
.claude/: settings.json
.playwright-mcp/: page-2026-07-02T17-43-45-919Z.yml
benches/: parse.rs
benchmarks/: Manifest.toml  Project.toml  RESULTS.md  bench_julia.jl  bench_parse.py  caseio_ffi.jl  convert_cases.py  core_json.jl  extract_matrix_bench.py  extract_powerworld_bench.py  fetch_cases.sh  fetch_powerworld.sh  oracle_compare.jl  pm_export.jl  powerio_ffi.jl  render_tables.py  requirements.txt  rich_corpus.py  run_rich_validation.sh  run_validation.sh  validate_bmopf_schema.py  validate_core.jl  validate_egret.py  validate_exapowerio.jl  validate_matrix.py  validate_opendss.py  validate_oracles.jl  validate_pandapower.py  validate_pandapower_converter.py  validate_powermodels.jl  validate_psse.jl  validate_pypsa.py  validate_surge.py
caseio/: Cargo.toml
caseio-capi/: Cargo.toml  README.md  cbindgen.toml
caseio-capi/examples/: smoke.c
caseio-capi/include/: caseio.h
caseio-capi/src/: lib.rs
caseio-ext/: Cargo.toml  pyproject.toml
caseio-ext/python/caseio/: _caseio.pyi
caseio-ext/src/: lib.rs
casemat/: Cargo.toml
casemat-ext/: Cargo.toml
casemat-ext/src/: lib.rs
casemat/src/: lib.rs  main.rs  opf_pipeline.rs  pipeline.rs
casemat/src/io/: meta.rs  mod.rs  mtx.rs
casemat/src/matrix/: adjacency.rs  bdoubleprime.rs  bprime.rs  incidence.rs  lacpf.rs  laplacian.rs  mod.rs  opf.rs  sensitivity.rs  tests.rs  ybus.rs
casemat/src/synth/: lattice.rs  mod.rs  pegase_like.rs  tree.rs
casemat/src/tui/: app.rs  mod.rs  screens.rs  sparsity.rs  theme.rs
casemat/tests/: canonical_writer.rs  dcopf.rs  matpower_cases.rs
docs/: README.md  book.toml  dcopf-bundle.md  format-fidelity.md  generator-cost-policy.md  languages.md  matrices.md  powerfactory.md  (+3 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: matpower.rs  powerio_json.rs  powerworld_aux.rs  pslf.rs  psse.rs  pwb.rs  pwd.rs
netmat-ext/: Cargo.toml
netmat-ext/src/: lib.rs
powerio/: Cargo.toml  README.md
powerio-capi/: Cargo.toml  README.md  cbindgen.toml
powerio-capi/examples/: arrow_c_data_interface.h  header_cpp.cpp  smoke.c
powerio-capi/include/: powerio.h
powerio-capi/src/: arrow_export.rs  lib.rs
powerio-cli/: Cargo.toml  README.md
powerio-cli/src/: cases.rs  main.rs
powerio-cli/src/tui/: app.rs  log_pane.rs  mod.rs  screens.rs  sparsity.rs  theme.rs
powerio-cli/tests/: cli.rs  conversion_matrix_report.rs
powerio-dist/: Cargo.toml  README.md
powerio-dist/docs/: conversion-matrix.md  distribution-validation.md
powerio-dist/examples/: regen_bmopf_examples.rs
powerio-dist/examples/bmopf/: 4bus_dy.json  README.md  ieee123.json  ieee34.json  ieee37.json
powerio-dist/src/: convert.rs  diagnostics.rs  error.rs  geo.rs  graph.rs  lib.rs  model.rs
powerio-dist/src/bmopf/: mod.rs  read.rs  write.rs
powerio-dist/src/dss/: defaults.rs  lex.rs  mod.rs  prop.rs  raw.rs  read.rs  rpn.rs  write.rs
powerio-dist/src/pmd/: mod.rs  read.rs  write.rs
powerio-dist/tests/: bmopf.rs  dss_bom.rs  dss_reader.rs  local_dss_corpus.rs  matrix.rs  pmd.rs  raw_fixtures.rs  rich.rs
powerio-dist/tools/: physics_check.py  solve_dss.py  verify_defaults.py
powerio-dist/tools/pmd/: Project.toml  pmdtool.jl
powerio-format/: Cargo.toml  README.md
powerio-format/src/: lib.rs
powerio-matrix/: Cargo.toml  README.md
powerio-matrix/benches/: matrix.rs
powerio-matrix/src/: lib.rs  main.rs  opf_pipeline.rs  pipeline.rs
powerio-matrix/src/io/: gridfm.rs  meta.rs  mod.rs  mtx.rs  sensitivity.rs
powerio-matrix/src/matrix/: adjacency.rs  bdoubleprime.rs  bprime.rs  incidence.rs  kkt.rs  lacpf.rs  laplacian.rs  lindist3flow.rs  mod.rs  opf.rs  sensitivity.rs  tests.rs  triplet.rs  ybus.rs
powerio-matrix/src/synth/: lattice.rs  mod.rs  pegase_like.rs  tree.rs
powerio-matrix/src/tui/: app.rs  mod.rs  screens.rs
powerio-matrix/tests/: canonical_writer.rs  dcopf.rs  lowered_balanced.rs  matpower_cases.rs  solver_properties.rs
powerio-matrix/tests/fixtures/: solver_matrix_stats.json
powerio-opf/: Cargo.toml  README.md
powerio-opf/src/: ac.rs  dc.rs  error.rs  lib.rs
powerio-opf/tests/: dcopf.rs
powerio-pkg/: Cargo.toml  README.md
powerio-pkg/examples/: generate_schemas.rs
powerio-pkg/src/: diagnostics.rs  geo.rs  goc3_scopf.rs  lib.rs  lowering.rs  model.rs  operating.rs  package.rs  provenance.rs  study.rs  summary.rs  validation.rs
powerio-pkg/tests/: geo.rs  roundtrip.rs
powerio-prob/: Cargo.toml  README.md
powerio-prob/src/: ac.rs  dc.rs  lib.rs
powerio-prob/src/matrix/: bundle.rs  kkt.rs  mod.rs
powerio-prob/src/scopf/: error.rs  goc3.rs  mod.rs  projection.rs  types.rs  wire.rs
powerio-prob/tests/: acopf.rs  dcopf.rs  scopf.rs
powerio-prob/tests/data/: README.md  goc3_small.json
powerio-py/: Cargo.toml
powerio-py/src/: lib.rs
powerio/benches/: parse.rs
powerio/examples/: bisect.rs  emit.rs  timeparse.rs
powerio/src/: dc.rs  error.rs  gen_cost.rs  geo.rs  indexed.rs  lib.rs  network.rs  normalize.rs  operations.rs  solver_tables.rs
powerio/src/format/: dgs.rs  egret.rs  goc3.rs  mod.rs  opfdata.rs  pandapower.rs  powerfactory.rs  powermodels.rs  powerworld.rs  pslf.rs  pslf_write.rs  psse.rs  pypsa.rs  routing.rs  surge.rs
powerio/src/format/matpower/: locate.rs  matlab.rs  mod.rs  rows.rs  tests.rs  writer.rs
powerio/src/format/powerworld/: FORMAT.md  aux.rs  auxiliary.rs  map.rs  mod.rs  objects.rs  pwb.rs  pwd.rs  tests.rs
powerio/src/geo/: layer.rs  mod.rs  pwd.rs
powerio/tests/: base_frequency.rs  convert.rs  dgs_parity.rs  geo_formats.rs  geo_layer.rs  normalize.rs  opfdata.rs  powerworld_aux.rs  powerworld_corpus.rs  powerworld_parity.rs  powerworld_pwb.rs  powerworld_pwd.rs  pslf.rs  psse_revisions.rs  roundtrip.rs  roundtrip_formats.rs  snapshot_schema.rs  validation.rs
powerio/tests/common/: mod.rs
(+185 files in other folders)
