[workspace]
members = ["powerio", "powerio-matrix", "powerio-cli", "powerio-py", "powerio-capi"]
# Bare `cargo build`/`test`/`clippy` touch only the library + CLI crates, so the
# toolchain never compiles the PyO3 extension (which needs libpython). Build the
# binding explicitly with `-p powerio-py`.
default-members = ["powerio", "powerio-matrix", "powerio-cli"]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
# The domain is full of proper nouns (MATPOWER, PowerModels, egret, PSS/E, MVAr);
# doc_markdown flags them as missing backticks, which is noise here.
doc_markdown = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
