[workspace]
members = ["powerio", "powerio-matrix", "powerio-cli", "powerio-py", "powerio-capi"]
# Bare `cargo build`/`test`/`clippy` touch only the library + CLI crates, so the
# toolchain never compiles the PyO3 extension (which needs libpython). Build the
# binding explicitly with `-p powerio-py`.
default-members = ["powerio", "powerio-matrix", "powerio-cli"]
resolver = "2"

# Single source for the release version and shared metadata; the crates inherit
# via `key.workspace = true`, so a release bump touches this version and the
# two dependency pins below.
[workspace.package]
version = "0.2.3"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/powerio"
homepage = "https://eigenergy.github.io/powerio/"

[workspace.dependencies]
# The intra-workspace deps carry the version pin `cargo publish` needs; keeping
# them here means the pin moves with the [workspace.package] version.
powerio = { path = "powerio", version = "0.2.3" }
powerio-matrix = { path = "powerio-matrix", version = "0.2.3" }
# Cross-crate type identity: `CsMat<f64>` (sprs) and the Arrow types cross crate
# boundaries, so every crate must build against the same major.
sprs = { version = "0.11", default-features = false }
arrow = { version = "58", default-features = false }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
# The domain is full of proper nouns (MATPOWER, PowerModels, egret, PSS/E, MVAr);
# doc_markdown flags them as missing backticks, which is noise here.
doc_markdown = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
