[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "powerio"
# version is read from powerio-py/Cargo.toml by maturin (kept single-source).
dynamic = ["version"]
description = "Lossless power system case file IO, format conversion, and sparse matrix and graph views"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["power systems", "matpower", "psse", "powermodels", "sparse", "ptdf", "dc-opf"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
# Zero runtime deps: parse/write/convert hand back plain dicts and strings, so
# `import powerio` pulls in nothing but the interpreter.
dependencies = []

[project.optional-dependencies]
# The matrix methods assemble scipy.sparse from the COO triplets the extension
# returns; the graph view builds a networkx graph. Install only what you use.
matrix = ["numpy>=1.21", "scipy>=1.7"]
graph = ["networkx>=2.6"]
all = ["numpy>=1.21", "scipy>=1.7", "networkx>=2.6"]
bench = ["matpowercaseframes", "pandapower"]
# Reading the gridfm Parquet export (`powerio gridfm`) in the test suite.
gridfm = ["pandas>=2", "pyarrow>=14"]

[project.urls]
Repository = "https://github.com/eigenergy/powerio"

[tool.maturin]
# The Rust extension lives in the powerio-py workspace member; the importable
# package is the pure-Python tree under python/powerio/, into which `_powerio`
# is dropped.
manifest-path = "powerio-py/Cargo.toml"
module-name = "powerio._powerio"
python-source = "python"
features = ["extension-module"]
strip = true
