[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "powerio"
# version is read from powerio-py/Cargo.toml by maturin (kept single-source).
dynamic = ["version"]
description = "Lossless power system case file IO, format conversion, and sparse matrix and graph views"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["power systems", "matpower", "psse", "powermodels", "sparse", "ptdf", "dc-opf"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
# Zero runtime deps: parse/write/convert hand back plain dicts and strings, so
# `import powerio` pulls in nothing but the interpreter.
dependencies = []

[project.optional-dependencies]
# The matrix methods assemble scipy.sparse from the COO triplets the extension
# returns; the graph view builds a networkx graph. Install only what you use.
matrix = ["numpy>=1.21", "scipy>=1.7"]
graph = ["networkx>=2.6"]
all = ["numpy>=1.21", "scipy>=1.7", "networkx>=2.6", "polars>=1"]
bench = ["matpowercaseframes", "pandapower", "pypsa>=1.0"]
# The published wheel includes the native gridfm writer. This extra installs
# Python packages for reading and inspecting the Parquet output.
gridfm = ["polars>=1"]
# Compatibility read path for downstream code that expects pandas DataFrames.
# pyarrow fixes current advisories in 23.0.1, which does not publish Python 3.9
# wheels; use the Polars gridfm extra on Python 3.9.
pandas = ["pandas>=2; python_version >= '3.10'", "pyarrow>=23.0.1; python_version >= '3.10'"]
# The MCP server exposes the powerio.mcp tool surface. The official `mcp` SDK
# requires Python >=3.10; the env marker keeps this extra empty on 3.9.
mcp = ["mcp>=1.2; python_version >= '3.10'"]

[project.scripts]
# Serves the powerio.mcp tool surface over stdio. Needs the `mcp` extra.
powerio-mcp = "powerio.mcp.server:main"

[project.urls]
Documentation = "https://eigenergy.github.io/powerio/"
Issues = "https://github.com/eigenergy/powerio/issues"
Repository = "https://github.com/eigenergy/powerio"

[tool.maturin]
# The Rust extension lives in the powerio-py workspace member; the importable
# package is the pure-Python tree under python/powerio/, into which `_powerio`
# is dropped.
manifest-path = "powerio-py/Cargo.toml"
module-name = "powerio._powerio"
python-source = "python"
features = ["extension-module", "gridfm"]
strip = true
# maturin resolves the workspace-root license files into the wheel and the
# package metadata, but does not copy them into the sdist on its own (the
# manifest lives in the powerio-py subcrate); without these, PyPI rejects the
# sdist for declaring a License-File it doesn't carry.
include = [
    { path = "LICENSE-APACHE", format = "sdist" },
    { path = "LICENSE-MIT", format = "sdist" },
]
