[package]
name = "caseio-ext"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "PyO3 extension module for caseio (builds the `caseio` Python wheel; not published to crates.io)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/caseio"
publish = false

# The compiled module is imported as `caseio._caseio`; the `caseio` Python
# package (caseio-ext/python/caseio/) wraps it. No numpy/scipy: parse/write/convert
# hand back plain dicts and strings, so the wheel has no runtime dependency.
[lib]
name = "_caseio"
crate-type = ["cdylib"]

[features]
# Opt-in so `cargo test`/`cargo check -p caseio-ext` don't link libpython.
# maturin turns it on via pyproject `[tool.maturin] features`.
extension-module = ["pyo3/extension-module"]

[dependencies]
caseio = { path = "../caseio" }
pyo3 = { version = "0.27", features = ["abi3-py39"] }
