# Second maturin build config (maturin takes one [tool.maturin] per pyproject).
# The root pyproject builds the `casemat` wheel; this one builds `caseio`.
# Both package trees live under the shared python/ directory.
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "caseio"
# version is read from caseio-ext/Cargo.toml by maturin (kept single-source).
dynamic = ["version"]
description = "Fast, lossless power-system case-file parser and format converter (no numpy/scipy)"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["power-systems", "matpower", "parser", "lossless", "convert", "psse"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
# No runtime dependencies on purpose: parse/write/convert hand back plain dicts
# and strings, so `import caseio` pulls in nothing but the interpreter.
dependencies = []

[project.urls]
Repository = "https://github.com/eigenergy/caseio"

[tool.maturin]
# The Rust extension is this crate; the importable package is python/caseio/
# (under this crate, matching project.name), into which `_caseio` is dropped.
# python-source must stay in-tree: maturin omits the pure-Python files of an
# out-of-tree (`../python`) source from the wheel, so the package would ship only
# the compiled module and `import caseio` would have no parse/convert.
manifest-path = "Cargo.toml"
module-name = "caseio._caseio"
python-source = "python"
features = ["extension-module"]
strip = true
