[package]
name = "casemat-ext"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "PyO3 extension module for casemat (builds the `casemat` Python wheel; not published to crates.io)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/caseio"
publish = false

# The compiled module is imported as `casemat._casemat`; the `casemat` Python
# package (python/casemat/) wraps it and assembles scipy/networkx objects.
[lib]
name = "_casemat"
crate-type = ["cdylib"]

[features]
# Opt-in so `cargo test`/`cargo check -p casemat-ext` don't link libpython.
# maturin turns it on via pyproject `[tool.maturin] features`.
extension-module = ["pyo3/extension-module"]

[dependencies]
casemat = { path = "../casemat", default-features = false }
pyo3 = { version = "0.27", features = ["abi3-py39"] }
numpy = "0.27"
# Must track casemat's sprs so `CsMat<f64>` is the same type across the boundary.
sprs = { version = "0.11", default-features = false }

# No workspace pedantic lints here: pyo3 macro-generated code trips them, and
# the i32 index narrowing is deliberate (and guarded) for scipy compatibility.
