[package]
name = "netmat-ext"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "PyO3 extension module for netmat (builds the `netmat` Python wheel; not published to crates.io)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/netmat"
publish = false

# The compiled module is imported as `netmat._netmat`; the `netmat` Python
# package (python/netmat/) wraps it and assembles scipy/networkx objects.
[lib]
name = "_netmat"
crate-type = ["cdylib"]

[features]
# Opt-in so `cargo test`/`cargo check -p netmat-ext` don't link libpython.
# maturin turns it on via pyproject `[tool.maturin] features`.
extension-module = ["pyo3/extension-module"]

[dependencies]
netmat = { path = "..", default-features = false }
pyo3 = { version = "0.27", features = ["abi3-py39"] }
numpy = "0.27"
# Must track netmat's sprs so `CsMat<f64>` is the same type across the boundary.
sprs = { version = "0.11", default-features = false }
