[package]
name = "powerio-capi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C ABI for powerio: parse, query, convert, and extract numeric tables."
license.workspace = true
repository.workspace = true
publish = false

# A C-consumable shared + static library. The header is checked in at
# powerio-capi/include/powerio.h (regenerate with `cbindgen` via cbindgen.toml).
[lib]
name = "powerio_capi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Zero-copy raw network export over the Arrow C Data Interface (`pio_export_arrow`).
# Off by default so the base ABI pulls in nothing but `powerio`.
arrow = ["dep:arrow"]
# gridfm-datakit Parquet reader (`pio_read_gridfm` / `pio_gridfm_scenario_ids`).
# Off by default so the base ABI pulls in nothing but `powerio`; enabling it pulls
# in powerio-matrix (arrow + parquet) for the reader.
gridfm = ["dep:powerio-matrix", "powerio-matrix/gridfm"]

[dependencies]
powerio.workspace = true
# Only the C Data Interface (`ffi`) is needed; the heavy arrow defaults stay off.
arrow = { workspace = true, features = ["ffi"], optional = true }
# Pulled in only by the `gridfm` feature: the reader lives in powerio-matrix.
# It re-exports powerio, so `Network` is the same type `make_network` already takes.
powerio-matrix = { workspace = true, optional = true }

[dev-dependencies]
# Only the gridfm C-ABI test uses it (write a dataset to a temp dir, read it back).
tempfile = "3"
