[package]
name = "powerio-capi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C ABI for powerio: parse, query, convert, and extract numeric tables."
license.workspace = true
repository.workspace = true
publish = false

# A C-consumable shared + static library. The header is checked in at
# powerio-capi/include/powerio.h (regenerate with `cbindgen` via cbindgen.toml).
[lib]
name = "powerio_capi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Distribution and package support are first class: every default powerio build
# ships the pio_dist_* and pio_package_* surfaces. Opt out with
# --no-default-features for a transmission-only library.
default = ["dist", "pkg"]
# Zero-copy raw network export over the Arrow C Data Interface (`pio_to_arrow`).
# Off by default so the base ABI pulls in nothing but `powerio`.
arrow = ["dep:arrow"]
# Sparse balanced matrix tables over `pio_to_arrow`. Enable with `arrow` for
# the export symbol itself; `pio_matrix_available()` reports whether both are on.
matrix = ["dep:powerio-matrix"]
# Multiconductor distribution formats (OpenDSS, PMD ENGINEERING JSON, BMOPF
# JSON): the pio_dist_* entry points. On by default (see `default` above).
dist = ["dep:powerio-dist"]
# gridfm-datakit Parquet reader (`pio_read_dir` / `pio_scenario_ids`).
# Off by default so the base ABI pulls in nothing but `powerio`; enabling it pulls
# in powerio-matrix (arrow + parquet) for the reader.
gridfm = ["dep:powerio-matrix", "powerio-matrix/gridfm"]
# `.pio.json` document API (`pio_package_*`). On by default.
pkg = ["dep:powerio-pkg"]

[dependencies]
powerio.workspace = true
powerio-dist = { workspace = true, optional = true }
powerio-pkg = { workspace = true, optional = true }
# Only the C Data Interface (`ffi`) is needed; the heavy arrow defaults stay off.
arrow = { workspace = true, features = ["ffi"], optional = true }
# Pulled in only by the `gridfm` feature: the reader lives in powerio-matrix.
# It re-exports powerio, so `Network` is the same type `make_network` already takes.
powerio-matrix = { workspace = true, optional = true }
serde_json = { workspace = true }

[dev-dependencies]
# Only the gridfm C-ABI test uses it (write a dataset to a temp dir, read it back).
tempfile = "3"
