[package]
name = "powerio-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command line interface and ratatui TUI for powerio: parse and convert power system case files and emit matrices."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://github.com/eigenergy/powerio#readme"
keywords = ["matpower", "cli", "tui"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "powerio"
path = "src/main.rs"
# The binary shares its name with the `powerio` lib crate, which collides in
# `cargo doc`'s output tree (rust-lang/cargo#6313). The CLI's docs are `--help`.
doc = false

[dependencies]
powerio-matrix = { workspace = true, features = ["gridfm"] }
powerio-prob = { workspace = true, features = ["matrix"] }
# Unconditional: the CLI always ships the distribution surface (`convert
# --to dss/pmd-json/bmopf-json`); only the C ABI gates it behind a feature.
powerio-dist.workspace = true
powerio-pkg.workspace = true
sprs.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
