[package]
name = "powerio-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Canonical format alias and JSON shape detection for powerio."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/powerio-format"
keywords = ["powerio", "format", "parser"]
categories = ["science", "parsing"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde_json.workspace = true

[lints]
workspace = true
