[package]
name = "powerio-matrix"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Sparse matrices and graph views for power system case files: B'/B'', Y_bus, PTDF, LODF, incidence, weighted Laplacian, adjacency, and DC-OPF instance data. Built on powerio."
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/powerio"
keywords = ["matpower", "sparse", "ptdf", "dc-opf"]
categories = ["science", "mathematics"]

# Render the feature-gated surface (gridfm Parquet export, the kkt operators) on
# docs.rs when this crate is published.
[package.metadata.docs.rs]
all-features = true

[features]
# Experimental DC-OPF interior point operators (optional).
kkt = []
# GridFM interchange: write the gridfm-datakit Parquet schema (and the shared
# Arrow record batches behind it). Pulls in arrow + parquet, off by default.
gridfm = ["dep:arrow", "dep:parquet"]

[lib]
name = "powerio_matrix"
path = "src/lib.rs"

[dependencies]
powerio = { path = "../powerio" }
sprs = { version = "0.11", default-features = false }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
walkdir = "2"
rayon = "1"
sha2 = "0.10"
# arrow and parquet release in lockstep and share `RecordBatch`; keep both on the
# same major. `snap` matches the Snappy compression pandas/datakit write by default.
arrow = { version = "58", default-features = false, optional = true }
parquet = { version = "58", default-features = false, features = ["arrow", "snap"], optional = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[lints]
workspace = true
