[package]
name = "powerio-opf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Index based OPF instance generators (DC-OPF shipped; AC-OPF and SCOPF planned) for power system case files."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/powerio-opf"
keywords = ["matpower", "opf", "optimization", "dc-opf"]
categories = ["science", "mathematics"]

# No features today, but this pins the docs.rs build to the same flags the
# Pages build uses (see powerio/Cargo.toml), so a later feature doesn't drift
# the two renders apart.
[package.metadata.docs.rs]
all-features = true

[lib]
name = "powerio_opf"
path = "src/lib.rs"

[dependencies]
# Only the powerio core: an OPF instance is index based (no matrices), so this
# crate needs the network data layer and nothing from powerio-matrix. The two
# are independent siblings.
powerio.workspace = true
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
