[package]
name = "powerio-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "PyO3 extension module for powerio (builds the `powerio` Python wheel; not published to crates.io)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/powerio"
publish = false

# The compiled module is imported as `powerio._powerio`; the `powerio` Python
# package (python/powerio/) wraps it: parse/convert/write cross as plain dicts
# and strings, and the matrix methods assemble scipy/networkx from COO triplets.
[lib]
name = "_powerio"
crate-type = ["cdylib"]

[features]
# Opt-in so `cargo test`/`cargo check -p powerio-py` don't link libpython.
# maturin turns it on via pyproject `[tool.maturin] features`.
extension-module = ["pyo3/extension-module"]

[dependencies]
powerio-matrix = { path = "../powerio-matrix", default-features = false }
pyo3 = { version = "0.27", features = ["abi3-py39"] }
# Must track powerio-matrix's sprs so `CsMat<f64>` is the same type across the
# boundary. No numpy: the matrix methods hand back COO triplets as plain Python
# lists, which the pure-Python layer assembles into scipy.sparse.
sprs = { version = "0.11", default-features = false }

# No workspace pedantic lints here: pyo3 macro-generated code trips them, and
# the i32 index narrowing is deliberate (and guarded) for scipy compatibility.
