[package]
name = "powerio-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PyO3 extension module for powerio (builds the `powerio` Python wheel; not published to crates.io)."
license.workspace = true
repository.workspace = true
publish = false

# The compiled module is imported as `powerio._powerio`; the `powerio` Python
# package (python/powerio/) wraps it: parse/convert/write cross as plain dicts
# and strings, and the matrix methods assemble scipy/networkx from COO triplets.
[lib]
name = "_powerio"
crate-type = ["cdylib"]

[features]
# Opt-in so `cargo test`/`cargo check -p powerio-py` don't link libpython.
# maturin turns it on via pyproject `[tool.maturin] features`.
extension-module = ["pyo3/extension-module"]
# Compile in the gridfm-datakit Parquet writer (`Network.write_gridfm`,
# `write_gridfm_batch`). The PyPI build enables this; custom local builds can
# omit it when they need only parse/write/convert and sparse matrices.
gridfm = ["powerio-matrix/gridfm"]

[dependencies]
powerio-matrix.workspace = true
# Unconditional: the wheel always ships the distribution surface (powerio.dist);
# only the C ABI gates it behind a feature.
powerio-dist.workspace = true
pyo3 = { version = "0.27", features = ["abi3-py39"] }
# Must track powerio-matrix's sprs so `CsMat<f64>` is the same type across the
# boundary. No numpy: the matrix methods hand back COO triplets as plain Python
# lists, which the pure-Python layer assembles into scipy.sparse.
sprs.workspace = true

# No workspace pedantic lints here: pyo3 macro-generated code trips them, and
# the i32 index narrowing is deliberate (and guarded) for scipy compatibility.
