[package]
name = "powerio"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Fast, lossless parser and typed data model for power-system case files. Parse MATPOWER .m and write it back byte-for-byte."
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/caseio"
keywords = ["power-systems", "matpower", "parser", "lossless"]
categories = ["science", "parsing"]

[dependencies]
thiserror = "2"
num-complex = "0.4"
# SIMD-accelerated float parsing — the dominant cost in parsing large cases.
fast-float = "0.2"
# A power network is a graph; connectivity/radial diagnostics live on Network.
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
# Format converters (PowerModels / EGRET JSON) serialize the typed model.
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
