[package]
name = "powerio"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Parser, typed data model, and format converters for power system case files."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eigenergy/powerio"
homepage = "https://github.com/eigenergy/powerio"
documentation = "https://docs.rs/powerio"
keywords = ["matpower", "parser", "lossless"]
categories = ["science", "parsing"]

# powerio has no features, so this just pins the docs.rs build to the same flags
# the Pages build uses; the block is here so a future `cargo publish` renders
# identically on docs.rs.
[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "2"
num-complex = "0.4"
# Byte-slice float parsing for numeric matrix rows, avoiding UTF-8 allocation.
lexical-core = "1"
# A power network is a graph; connectivity/radial diagnostics live on Network.
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
# Format converters (PowerModels / egret JSON) serialize the typed model.
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
